fix footer content being cut off

--- a/css-course-project/shared.css
+++ b/css-course-project/shared.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   display: grid;
   height: 100%;
-  grid-template-rows: 3.5rem auto 8rem;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
   grid-template-areas: "header"
                         "main"
                         "footer";
